Name:            vishnu
Cabal-Version:   >=1.2
Version:         0.1
Author:          xanxys
Maintainer:      xanxys@gmail.com
Synopsis:        2d playground
Build-Type:      Simple
License:         BSD3
Category:       Application System Graphics
Description:
 2d playground (TODO: write more)

Executable vishnu
    Main-is: Main.hs
    Extensions: ForeignFunctionInterface
    Build-depends:
        base>=3 && <5, bytestring,  containers>=0.4, transformers>=0.2, time>=1.2, random>=1.0,
        Vec>=0.9,
        gtk>=0.10, cairo>=0.12, glib>=0.12

